[gd_scene load_steps=11 format=2]

[ext_resource path="res://environment/BasicFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Exit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Structure.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/Level3.gd" type="Script" id=7]
[ext_resource path="res://objects/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Cursor.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 440.961, 12.1725 )

[node name="Level3" type="Node2D"]
script = ExtResource( 7 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -1, 1, 0, -65525, 1, 0, 65535, 1, 0, 11, 1, 0, 131071, 1, 0, 65546, 1, 0, 65547, 1, 0, 196607, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 262143, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 327679, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 393215, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 458751, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 524287, 1, 0, 589823, 1, 0, 524288, 0, 0, 524289, 0, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0 )

[node name="Exit" parent="." instance=ExtResource( 4 )]
position = Vector2( 63.2241, 695.01 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 979.007, 56.8175 )

[node name="Structure" parent="." instance=ExtResource( 5 )]
position = Vector2( 726.033, 172.213 )
rotation = 1.5708

[node name="PlatformLeft" parent="." instance=ExtResource( 6 )]
position = Vector2( 275.247, 494.671 )

[node name="PlatformRight" parent="." instance=ExtResource( 6 )]
position = Vector2( 470.234, 638.35 )

[node name="Box" parent="." instance=ExtResource( 3 )]
position = Vector2( 586.759, 441.128 )

[node name="Button" parent="." instance=ExtResource( 8 )]
position = Vector2( 163.143, 743.067 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 312.908, 726.645 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 317.5, 86.9345 )
shape = SubResource( 1 )

[node name="Box4" parent="." instance=ExtResource( 3 )]
position = Vector2( 862.577, 163.305 )

[node name="Cursor" parent="." instance=ExtResource( 9 )]
position = Vector2( -915.061, 99.4561 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
